httpd/httpd-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-test
  namespace: raphael-test
  labels:
    app: httpd-test
spec:
  type: NodePort
  selector:
    app: httpd-test
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
